k3s/infra/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus.muitaconta.com.br
      secretName: grafana-tls
  rules:
    - host: "prometheus.muitaconta.com.br"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-stack-kube-prometheus-prometheus
                port:
                  name: web
